[TASK] Updated to Typo3 12, 13 & 14. Using the right auth services

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:flux="http://typo3.org/ns/FluidTYPO3/Flux/ViewHelpers" xmlns:v="http://typo3.org/ns/FluidTYPO3/Vhs/ViewHelpers">
-<head>
-    <meta charset="utf-8" />
-    <title>{f:if(condition: pageTitle, then: pageTitle, else: 'My Website')}</title>
-</head>
-<body>  
-    <f:render section="content" />
-</body>
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<f:render section="content" />
 </html>
