--- a/Resources/Private/Templates/Backend/Configuration/BackendList.html
+++ b/Resources/Private/Templates/Backend/Configuration/BackendList.html
@@ -53,6 +53,7 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
+                        <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.enabled" /></th>
                         <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.backendLoginLabel" /></th>
                         <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.tenantId" /></th>
                         <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.clientId" /></th>
@@ -62,7 +63,21 @@
                 </thead>
                 <tbody>
                     <f:for each="{configs}" as="config">
-                        <tr>
+                        <tr{f:if(condition: '!{config.enabled}', then: ' style="opacity: 0.6;"')}>
+                            <td>
+                                <f:if condition="{config.enabled}">
+                                    <f:then>
+                                        <span class="text-success">
+                                            <core:icon identifier="actions-check" size="small" />
+                                        </span>
+                                    </f:then>
+                                    <f:else>
+                                        <span class="text-danger">
+                                            <core:icon identifier="actions-close" size="small" />
+                                        </span>
+                                    </f:else>
+                                </f:if>
+                            </td>
                             <td>
                                 <a href="{config.editUrl}">
                                     <f:if condition="{config.backendLoginLabel}">
