[TASK] Fixed issues

--- a/Resources/Private/Templates/Login/AzureLoginForm.html
+++ b/Resources/Private/Templates/Login/AzureLoginForm.html
@@ -8,8 +8,8 @@
 
 <f:section name="loginFormFields">
     <f:be.pageRenderer
-        includeJavaScriptModules="{
-            0: '@typo3/backend/user-pass-login.js'
+        includeRequireJsModules="{
+            0: 'TYPO3/CMS/Backend/UserPassLogin'
         }"
     />
 
