--- a/Resources/Private/Templates/Backend/Configuration/BackendList.html
+++ b/Resources/Private/Templates/Backend/Configuration/BackendList.html
@@ -19,6 +19,7 @@
     </div>
 </f:if>
 
+<f:if condition="{id}">
 <ul class="nav nav-tabs mb-4">
     <li class="nav-item">
         <a class="nav-link" href="{frontendUrl}">
@@ -31,6 +32,7 @@
         </a>
     </li>
 </ul>
+</f:if>
 
 <div class="callout callout-info">
     <div class="callout-body">
@@ -51,6 +53,7 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
+                        <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.enabled" /></th>
                         <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.backendLoginLabel" /></th>
                         <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.tenantId" /></th>
                         <th><f:translate key="LLL:EXT:ok_azure_login/Resources/Private/Language/locallang_be_module.xlf:label.clientId" /></th>
@@ -60,7 +63,21 @@
                 </thead>
                 <tbody>
                     <f:for each="{configs}" as="config">
-                        <tr>
+                        <tr{f:if(condition: '!{config.enabled}', then: ' style="opacity: 0.6;"')}>
+                            <td>
+                                <f:if condition="{config.enabled}">
+                                    <f:then>
+                                        <span class="text-success">
+                                            <core:icon identifier="actions-check" size="small" />
+                                        </span>
+                                    </f:then>
+                                    <f:else>
+                                        <span class="text-danger">
+                                            <core:icon identifier="actions-close" size="small" />
+                                        </span>
+                                    </f:else>
+                                </f:if>
+                            </td>
                             <td>
                                 <a href="{config.editUrl}">
                                     <f:if condition="{config.backendLoginLabel}">
